2013-04-05  Mario Pulido <mario.pulido@artica.es>

	* godmode/events/event_edit_filter.php: Added help tip in event editor.

2013-04-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/operation/tactical.php,
	mobile/operation/home.php, mobile/include/style/main.css,
	include/functions_html.php, include/functions_reporting.php: some
	fixes and improves in the mobile console.

2013-04-05  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_recontask.php: Updated help.

2013-04-04 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/functions_flot.php, operation/agentes/stat_win.php:
	cleaned source code style.
	
	* mobile/include/ui.class.php, mobile/include/style/main.css,
	mobile/index.php, mobile/operation/module_graph.php,
	mobile/operation/modules.php: more changes for the mobile in the
	view of graph module.

2013-04-04  Mario Pulido <mario.pulido@artica.es>

	* extensions/update_manager/main.php: Fixed information bug and
	added help tip in offline packages loader

2013-04-04  Mario Pulido <mario.pulido@artica.es>	

	* include/help/en/help_recontask.php,
        include/help/es/help_recontask.php: Updated help

2013-04-04  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_inventory_tab.php: Updated help.

	* include/help/ja/help_categories.php: Added a new help file.

2013-04-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_actions.php: Fixed that any groups are shown
	to all users even if user has no permission to access the group.

2013-04-03  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Removed an unnecessary
	modification, because 'talert_compound' is obsolete.

2013-04-02  Dario Rodriguez <dario@artica.es>

	* include/functions_api.php: New function to create a tag
	via API.
	* include/functions_tags.php: Create tag only if not exists.