@@ -1,3 +1,8 @@
+2013-04-05  Ramon Novoa  <rnovoa@artica.es>
+
+	* include/functions_events.php: Display the event text properly.
+	  Fixes bug #3609638.
+
 2013-04-05  Mario Pulido <mario.pulido@artica.es>
 
 	* godmode/events/event_edit_filter.php: Added help tip in event editor.
